gitops/obsidian/couchdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: couchdb
  namespace: obsidian
  labels:
    app: couchdb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: couchdb
  template:
    metadata:
      labels:
        app: couchdb
      annotations:
        couchdb-config-version: "2"
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: couchdb
          image: registry.rupan.dev/upstream/docker.io/library/couchdb@sha256:199ff89f9a930df6032a216570ae0169fcc36c449bb02b40fafeb6efecdb606f  # yamllint disable-line rule:line-length
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
          ports:
            - name: http
              containerPort: 5984
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: data
              mountPath: /opt/couchdb/data
            - name: config-storage
              mountPath: /opt/couchdb/etc/local.d
            - name: tmp
              mountPath: /tmp
          livenessProbe:
            tcpSocket:
              port: 5984
            initialDelaySeconds: 20
            periodSeconds: 20
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: couchdb-data
        - name: cors-config-source
          configMap:
            name: couchdb-cors-config
        - name: config-storage
          emptyDir: {}
        - name: tmp
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: couchdb
  namespace: obsidian
spec:
  selector:
    app: couchdb
  ports:
    - name: http
      port: 5984
      targetPort: http
